--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Michael-emmi.github.io by michael-emmi</title>
+    <title>Michael Emmi by michael-emmi</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Michael-emmi.github.io</h1>
+        <h1>Michael Emmi</h1>
         <p></p>
 
 
@@ -23,37 +23,144 @@
 
       </header>
       <section>
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <h1>
+<a name="michael-emmi--cv" class="anchor" href="#michael-emmi--cv"><span class="octicon octicon-link"></span></a>Michael Emmi / <a href="cv/cv-michaelemmi.pdf" title="Curriculum Vitæ">CV</a>
+</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p><img src="images/mje-photo9.jpg" alt="Maybe a picture"></p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+<h2>
+<a name="about" class="anchor" href="#about"><span class="octicon octicon-link"></span></a>About</h2>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p>Michael received his Ph.D. in Computer Science from the University of
+California, Los Angeles (UCLA) in 2010. Michael joined the IMDEA Software
+Institute in September 2013, following a post-doc at the Université Paris
+Diderot, on a fellowship awarded by La Fondation Sciences Mathématiques de Paris.
+Prior to receiving his doctorate, Michael completed his undergraduate studies
+at the University of Binghamton, of the State University of New York (SUNY). He
+has been a teaching assistant for undergraduate courses at UCLA and Université
+Paris Diderot, and has held internships at <a href="http://research.microsoft.com/" title="Microsoft Research">Microsoft Research</a>, <a href="http://www.nasa.gov/centers/ames/home/index.html" title="NASA Ames">NASA
+Ames Research Center</a>, and <a href="http://www.ibm.com/us/" title="IBM">IBM</a>.</p>
 
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<p>Michael is primarily interested in developing formal techniques to foster the
+construction of reliable software systems. Specifically, Michael has developed
+formal models to support the analysis of reactive, parallel, and distributed
+software systems, studied their theoretical properties (i.e., decidability,
+complexity), and developed exploration techniques to quickly discover faulty
+behavior in, or prove correctness of, such systems. Besides being the/a
+principal author of many noteworthy scientific publications (see the
+Publications list below), Michael is a lead developer of some software
+verification tools (see the Software list below).</p>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<h2>
+<a name="professional-activities" class="anchor" href="#professional-activities"><span class="octicon octicon-link"></span></a>Professional Activities</h2>
 
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+<ul>
+<li>
+<a href="http://popl.mpi-sws.org/2015/">POPL '15</a>: 42nd ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages / External Review Committee</li>
+<li>
+<a href="http://fm2015.ifi.uio.no">FM '15</a>: 20th International Symposium on Formal Methods / Program Committee</li>
+<li>
+<a href="http://software.imdea.org/ec2-2014/">(EC)2 '14</a>: 7th International Workshop on Exploiting Concurrency Efficiently and Correctly / Program Chair</li>
+<li>
+<a href="http://conferences.inf.ed.ac.uk/pldi2014/">PLDI '14</a>: 35th annual ACM SIGPLAN Conference on Programming Language Design and Implementation / External Review Committee</li>
+<li>
+<a href="http://popl.mpi-sws.org/2013/">POPL '13</a>: 40th ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages / External Review Committee</li>
+<li>
+<a href="http://vmcai13.di.univr.it/">VMCAI '13</a>: 14th International Symposium on Verification, Model Checking and Abstract Interpretation / Program Committee </li>
+</ul><h2>
+<a name="publications" class="anchor" href="#publications"><span class="octicon octicon-link"></span></a>Publications</h2>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<ul>
+<li>Exploiting Synchronization in the Analysis of Shared-Memory Asynchronous Programs / SPIN '14
+/ <a href="papers/conf-spin-EmmiOT14.pdf">pdf</a>
+</li>
+<li>SMACK: Decoupling Source Language Details from Verifier Implementations / CAV '14
+/ <a href="papers/conf-cav-RakamaricE14.pdf">pdf</a>
+</li>
+<li>Bounded Phase Analysis of Message-Passing Programs / STTT '14
+/ <a href="papers/journals-sttt-BouajjaniE14.pdf">pdf</a>
+</li>
+<li>Analysis of Recursively Parallel Programs / TOPLAS '13
+/ <a href="papers/journals-toplas-BouajjaniE13.pdf">pdf</a>
+</li>
+<li>Verifying Concurrent Programs Against Sequential Specifications / ESOP '13
+/ <a href="papers/conf-esop-BouajjaniEEH13.pdf">pdf</a>
+</li>
+<li>Asynchronous Programs with Prioritized Task-Buffers / FSE '12
+/ <a href="papers/conf-fse-EmmiLQ12.pdf">pdf</a>
+</li>
+<li>Finding Non-Terminating Executions in Distributed Asynchronous Programs / SAS '12
+/ <a href="papers/conf-sas-EmmiL12.pdf">pdf</a>
+</li>
+<li>Detecting Fair Non-Termination in Multithreaded Programs / CAV '12
+/ <a href="papers/conf-cav-AtigBEL12.pdf">pdf</a>
+</li>
+<li>Bounded Phase Analysis of Message-Passing Programs / TACAS '12
+/ <a href="papers/conf-tacas-BouajjaniE12.pdf">pdf</a>
+</li>
+<li>Analysis of Recursively Parallel Programs / POPL '12 
+/ <a href="papers/conf-popl-BouajjaniE12.pdf">pdf</a>
+</li>
+<li>On Sequentializing Concurrent Programs / SAS '11
+/ <a href="papers/conf-sas-BouajjaniEP11.pdf">pdf</a>
+</li>
+<li>Delay-Bounded Scheduling / POPL '11
+/ <a href="papers/conf-popl-EmmiQR11.pdf">pdf</a>
+</li>
+<li>Parameterized Verification of Transactional Memories / PLDI '10
+/ <a href="papers/conf-pldi-EmmiMM10.pdf">pdf</a>
+</li>
+<li>Verifying Reference Counting Implemnetations / TACAS '09
+/ <a href="papers/conf-tacas-EmmiJKM09.pdf">pdf</a>
+</li>
+<li>Assume-Guarantee Verification for Interface Automata / FM '08
+/ <a href="papers/conf-fm-EmmiGP08.pdf">pdf</a>
+</li>
+<li>Type-Preserving Compilation for Large-Scale Optimizing Object-Oriented
+Compilers / PLDI '08
+/ <a href="papers/conf-pldi-ChenHPECCP08.pdf">pdf</a>
+</li>
+<li>Assembling an Expressive Facial Animation System / Sandbox '07
+/ <a href="papers/conf-sandbox-WangEF07.pdf">pdf</a>
+</li>
+<li>Dynamic Test Input Generation for Database Applications / ISSTA '07
+/ <a href="papers/conf-issta-EmmiMS07.pdf">pdf</a>
+</li>
+<li>Verifying Compensating Transactions / VMCAI '07
+/ <a href="papers/conf-vmcai-EmmiM07.pdf">pdf</a>
+</li>
+<li>Lock Allocation / POPL '07
+/ <a href="papers/conf-popl-EmmiFJM07.pdf">pdf</a>
+</li>
+<li>Decision Problems for the Verification of Real-Time Software / HSCC '06
+/ <a href="papers/conf-hscc-EmmiM06.pdf">pdf</a>
+</li>
+</ul><h2>
+<a name="software" class="anchor" href="#software"><span class="octicon octicon-link"></span></a>Software</h2>
 
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<ul>
+<li>
+<a href="https://github.com/smackers/smack">SMACK</a> / LLVM bitcode to Boogie translation.</li>
+<li>
+<a href="https://github.com/michael-emmi/c2s">c2s</a> / concurrent to sequential program translations.</li>
+<li>
+<p><a href="https://github.com/michael-emmi/printlncs">printlncs</a> / save paper by printing every two pages of
+<a href="http://www.springer.com/computer/lncs">LNCS</a> proceedings on a single page, without scaling.</p>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>"Lecture Notes in Computer Science"</p>
+</li>
+</ul><h2>
+<a name="contact" class="anchor" href="#contact"><span class="octicon octicon-link"></span></a>Contact</h2>
 
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<p>IMDEA Software Institue<br>
+Campus Montegancedo UPM<br>
+28223 Pozuelo de Alarcón, Madrid<br>
+España</p>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p>E / <a href="mailto:michael.emmi@gmail.com">michael.emmi@gmail.com</a><br>
+T / +34 911 012 202 (Spain)<br>
+T / +1 (310) 564-6453 (USA)</p>
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
