Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -1,35 +1,33 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Michael Emmi by michael-emmi</title>
+    <meta name="description" content="Michael Emmi : ">
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Michael Emmi</title>
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>Michael Emmi</h1>
-        <p></p>
 
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/michael-emmi">View on GitHub</a>
 
-        <p class="view"><a href="https://github.com/michael-emmi">View My GitHub Profile</a></p>
+          <h1 id="project_title">Michael Emmi</h1>
+          <h2 id="project_tagline"></h2>
 
-      </header>
-      <section>
-        <h1>
-<a name="michael-emmi--cv" class="anchor" href="#michael-emmi--cv"><span class="octicon octicon-link"></span></a>Michael Emmi / <a href="cv/cv-michaelemmi.pdf" title="Curriculum Vitæ">CV</a>
-</h1>
+        </header>
+    </div>
 
-<p><img src="images/mje-photo9.jpg" alt="Maybe a picture"></p>
-
-<h2>
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <h2>
 <a name="about" class="anchor" href="#about"><span class="octicon octicon-link"></span></a>About</h2>
 
 <p>Michael received his Ph.D. in Computer Science from the University of
@@ -145,11 +143,8 @@ Compilers / PLDI '08
 <li>
 <a href="https://github.com/michael-emmi/c2s">c2s</a> / concurrent to sequential program translations.</li>
 <li>
-<p><a href="https://github.com/michael-emmi/printlncs">printlncs</a> / save paper by printing every two pages of
-<a href="http://www.springer.com/computer/lncs">LNCS</a> proceedings on a single page, without scaling.</p>
-
-<p>"Lecture Notes in Computer Science"</p>
-</li>
+<a href="https://github.com/michael-emmi/printlncs">printlncs</a> / save paper by printing every two pages of
+<a href="http://www.springer.com/computer/lncs" title="Lecture Notes in Computer Science">LNCS</a> proceedings on a single page, without scaling.</li>
 </ul><h2>
 <a name="contact" class="anchor" href="#contact"><span class="octicon octicon-link"></span></a>Contact</h2>
 
@@ -162,11 +157,16 @@ España</p>
 T / +34 911 012 202 (Spain)<br>
 T / +1 (310) 564-6453 (USA)</p>
       </section>
-      <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+
     
+
   </body>
 </html>
