Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -54,86 +54,59 @@ verification tools (see the Software list below).</p>
 <a name="professional-activities" class="anchor" href="#professional-activities"><span class="octicon octicon-link"></span></a>Professional Activities</h2>
 
 <ul>
-<li>
-<a href="http://popl.mpi-sws.org/2015/">POPL '15</a>: 42nd ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages / External Review Committee</li>
-<li>
-<a href="http://fm2015.ifi.uio.no">FM '15</a>: 20th International Symposium on Formal Methods / Program Committee</li>
-<li>
-<a href="http://software.imdea.org/ec2-2014/">(EC)2 '14</a>: 7th International Workshop on Exploiting Concurrency Efficiently and Correctly / Program Chair</li>
-<li>
-<a href="http://conferences.inf.ed.ac.uk/pldi2014/">PLDI '14</a>: 35th annual ACM SIGPLAN Conference on Programming Language Design and Implementation / External Review Committee</li>
-<li>
-<a href="http://popl.mpi-sws.org/2013/">POPL '13</a>: 40th ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages / External Review Committee</li>
-<li>
-<a href="http://vmcai13.di.univr.it/">VMCAI '13</a>: 14th International Symposium on Verification, Model Checking and Abstract Interpretation / Program Committee </li>
+<li><p><a href="http://popl.mpi-sws.org/2015/">POPL '15</a>: 42nd ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages / External Review Committee</p></li>
+<li><p><a href="http://fm2015.ifi.uio.no">FM '15</a>: 20th International Symposium on Formal Methods / Program Committee</p></li>
+<li><p><a href="http://software.imdea.org/ec2-2014/">(EC)2 '14</a>: 7th International Workshop on Exploiting Concurrency Efficiently and Correctly / Program Chair</p></li>
+<li><p><a href="http://conferences.inf.ed.ac.uk/pldi2014/">PLDI '14</a>: 35th annual ACM SIGPLAN Conference on Programming Language Design and Implementation / External Review Committee</p></li>
+<li><p><a href="http://popl.mpi-sws.org/2013/">POPL '13</a>: 40th ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages / External Review Committee</p></li>
+<li><p><a href="http://vmcai13.di.univr.it/">VMCAI '13</a>: 14th International Symposium on Verification, Model Checking and Abstract Interpretation / Program Committee </p></li>
 </ul><h2>
 <a name="publications" class="anchor" href="#publications"><span class="octicon octicon-link"></span></a>Publications</h2>
 
 <ul>
-<li>Exploiting Synchronization in the Analysis of Shared-Memory Asynchronous Programs / SPIN '14
-/ <a href="papers/conf-spin-EmmiOT14.pdf">pdf</a>
-</li>
-<li>SMACK: Decoupling Source Language Details from Verifier Implementations / CAV '14
-/ <a href="papers/conf-cav-RakamaricE14.pdf">pdf</a>
-</li>
-<li>Bounded Phase Analysis of Message-Passing Programs / STTT '14
-/ <a href="papers/journals-sttt-BouajjaniE14.pdf">pdf</a>
-</li>
-<li>Analysis of Recursively Parallel Programs / TOPLAS '13
-/ <a href="papers/journals-toplas-BouajjaniE13.pdf">pdf</a>
-</li>
-<li>Verifying Concurrent Programs Against Sequential Specifications / ESOP '13
-/ <a href="papers/conf-esop-BouajjaniEEH13.pdf">pdf</a>
-</li>
-<li>Asynchronous Programs with Prioritized Task-Buffers / FSE '12
-/ <a href="papers/conf-fse-EmmiLQ12.pdf">pdf</a>
-</li>
-<li>Finding Non-Terminating Executions in Distributed Asynchronous Programs / SAS '12
-/ <a href="papers/conf-sas-EmmiL12.pdf">pdf</a>
-</li>
-<li>Detecting Fair Non-Termination in Multithreaded Programs / CAV '12
-/ <a href="papers/conf-cav-AtigBEL12.pdf">pdf</a>
-</li>
-<li>Bounded Phase Analysis of Message-Passing Programs / TACAS '12
-/ <a href="papers/conf-tacas-BouajjaniE12.pdf">pdf</a>
-</li>
-<li>Analysis of Recursively Parallel Programs / POPL '12 
-/ <a href="papers/conf-popl-BouajjaniE12.pdf">pdf</a>
-</li>
-<li>On Sequentializing Concurrent Programs / SAS '11
-/ <a href="papers/conf-sas-BouajjaniEP11.pdf">pdf</a>
-</li>
-<li>Delay-Bounded Scheduling / POPL '11
-/ <a href="papers/conf-popl-EmmiQR11.pdf">pdf</a>
-</li>
-<li>Parameterized Verification of Transactional Memories / PLDI '10
-/ <a href="papers/conf-pldi-EmmiMM10.pdf">pdf</a>
-</li>
-<li>Verifying Reference Counting Implemnetations / TACAS '09
-/ <a href="papers/conf-tacas-EmmiJKM09.pdf">pdf</a>
-</li>
-<li>Assume-Guarantee Verification for Interface Automata / FM '08
-/ <a href="papers/conf-fm-EmmiGP08.pdf">pdf</a>
-</li>
-<li>Type-Preserving Compilation for Large-Scale Optimizing Object-Oriented
+<li><p>Exploiting Synchronization in the Analysis of Shared-Memory Asynchronous Programs / SPIN '14
+/ <a href="papers/conf-spin-EmmiOT14.pdf">pdf</a></p></li>
+<li><p>SMACK: Decoupling Source Language Details from Verifier Implementations / CAV '14
+/ <a href="papers/conf-cav-RakamaricE14.pdf">pdf</a></p></li>
+<li><p>Bounded Phase Analysis of Message-Passing Programs / STTT '14
+/ <a href="papers/journals-sttt-BouajjaniE14.pdf">pdf</a></p></li>
+<li><p>Analysis of Recursively Parallel Programs / TOPLAS '13
+/ <a href="papers/journals-toplas-BouajjaniE13.pdf">pdf</a></p></li>
+<li><p>Verifying Concurrent Programs Against Sequential Specifications / ESOP '13
+/ <a href="papers/conf-esop-BouajjaniEEH13.pdf">pdf</a></p></li>
+<li><p>Asynchronous Programs with Prioritized Task-Buffers / FSE '12
+/ <a href="papers/conf-fse-EmmiLQ12.pdf">pdf</a></p></li>
+<li><p>Finding Non-Terminating Executions in Distributed Asynchronous Programs / SAS '12
+/ <a href="papers/conf-sas-EmmiL12.pdf">pdf</a></p></li>
+<li><p>Detecting Fair Non-Termination in Multithreaded Programs / CAV '12
+/ <a href="papers/conf-cav-AtigBEL12.pdf">pdf</a></p></li>
+<li><p>Bounded Phase Analysis of Message-Passing Programs / TACAS '12
+/ <a href="papers/conf-tacas-BouajjaniE12.pdf">pdf</a></p></li>
+<li><p>Analysis of Recursively Parallel Programs / POPL '12 
+/ <a href="papers/conf-popl-BouajjaniE12.pdf">pdf</a></p></li>
+<li><p>On Sequentializing Concurrent Programs / SAS '11
+/ <a href="papers/conf-sas-BouajjaniEP11.pdf">pdf</a></p></li>
+<li><p>Delay-Bounded Scheduling / POPL '11
+/ <a href="papers/conf-popl-EmmiQR11.pdf">pdf</a></p></li>
+<li><p>Parameterized Verification of Transactional Memories / PLDI '10
+/ <a href="papers/conf-pldi-EmmiMM10.pdf">pdf</a></p></li>
+<li><p>Verifying Reference Counting Implemnetations / TACAS '09
+/ <a href="papers/conf-tacas-EmmiJKM09.pdf">pdf</a></p></li>
+<li><p>Assume-Guarantee Verification for Interface Automata / FM '08
+/ <a href="papers/conf-fm-EmmiGP08.pdf">pdf</a></p></li>
+<li><p>Type-Preserving Compilation for Large-Scale Optimizing Object-Oriented
 Compilers / PLDI '08
-/ <a href="papers/conf-pldi-ChenHPECCP08.pdf">pdf</a>
-</li>
-<li>Assembling an Expressive Facial Animation System / Sandbox '07
-/ <a href="papers/conf-sandbox-WangEF07.pdf">pdf</a>
-</li>
-<li>Dynamic Test Input Generation for Database Applications / ISSTA '07
-/ <a href="papers/conf-issta-EmmiMS07.pdf">pdf</a>
-</li>
-<li>Verifying Compensating Transactions / VMCAI '07
-/ <a href="papers/conf-vmcai-EmmiM07.pdf">pdf</a>
-</li>
-<li>Lock Allocation / POPL '07
-/ <a href="papers/conf-popl-EmmiFJM07.pdf">pdf</a>
-</li>
-<li>Decision Problems for the Verification of Real-Time Software / HSCC '06
-/ <a href="papers/conf-hscc-EmmiM06.pdf">pdf</a>
-</li>
+/ <a href="papers/conf-pldi-ChenHPECCP08.pdf">pdf</a></p></li>
+<li><p>Assembling an Expressive Facial Animation System / Sandbox '07
+/ <a href="papers/conf-sandbox-WangEF07.pdf">pdf</a></p></li>
+<li><p>Dynamic Test Input Generation for Database Applications / ISSTA '07
+/ <a href="papers/conf-issta-EmmiMS07.pdf">pdf</a></p></li>
+<li><p>Verifying Compensating Transactions / VMCAI '07
+/ <a href="papers/conf-vmcai-EmmiM07.pdf">pdf</a></p></li>
+<li><p>Lock Allocation / POPL '07
+/ <a href="papers/conf-popl-EmmiFJM07.pdf">pdf</a></p></li>
+<li><p>Decision Problems for the Verification of Real-Time Software / HSCC '06
+/ <a href="papers/conf-hscc-EmmiM06.pdf">pdf</a></p></li>
 </ul><h2>
 <a name="software" class="anchor" href="#software"><span class="octicon octicon-link"></span></a>Software</h2>
 
