Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -134,15 +134,14 @@ verification tools (see the Software list below).</p>
 <h2>
 <a name="software" class="anchor" href="#software"><span class="octicon octicon-link"></span></a>Software</h2>
 
-<ul>
-<li>
-<a href="https://github.com/smackers/smack">SMACK</a> / LLVM bitcode to Boogie translation.</li>
-<li>
-<a href="https://github.com/michael-emmi/c2s">c2s</a> / concurrent to sequential program translations.</li>
-<li>
-<a href="https://github.com/michael-emmi/printlncs">printlncs</a> / save paper by printing every two pages of
-<a href="http://www.springer.com/computer/lncs" title="Lecture Notes in Computer Science">LNCS</a> proceedings on a single page, without scaling.</li>
-</ul><h2>
+<p><a href="https://github.com/smackers/smack">SMACK</a> / LLVM bitcode to Boogie translation.</p>
+
+<p><a href="https://github.com/michael-emmi/c2s">c2s</a> / concurrent to sequential program translations.</p>
+
+<p><a href="https://github.com/michael-emmi/printlncs">printlncs</a> / save paper by printing every two pages of
+  <a href="http://www.springer.com/computer/lncs" title="Lecture Notes in Computer Science">LNCS</a> proceedings on a single page, without scaling.</p>
+
+<h2>
 <a name="contact" class="anchor" href="#contact"><span class="octicon octicon-link"></span></a>Contact</h2>
 
 <p>IMDEA Software Institue<br>
