Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ verification tools (see the Software list below).</p>
 <p>Parameterized Verification of Transactional Memories
   / PLDI '10 / <a href="papers/conf-pldi-EmmiMM10.pdf">pdf</a></p>
 
-<p>Verifying Reference Counting Implemnetations
+<p>Verifying Reference Counting Implementations
   / TACAS '09 / <a href="papers/conf-tacas-EmmiJKM09.pdf">pdf</a></p>
 
 <p>Assume-Guarantee Verification for Interface Automata
