Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h2>
-<a name="about" class="anchor" href="#about"><span class="octicon octicon-link"></span></a>About</h2>
+<a id="about" class="anchor" href="#about" aria-hidden="true"><span class="octicon octicon-link"></span></a>About</h2>
 
 <p>Michael received his Ph.D. in Computer Science from the University of
 California, Los Angeles (UCLA) in 2010. Michael joined the IMDEA Software
@@ -51,7 +51,7 @@ Publications list below), Michael is a lead developer of some software
 verification tools (see the Software list below).</p>
 
 <h2>
-<a name="professional-activities" class="anchor" href="#professional-activities"><span class="octicon octicon-link"></span></a>Professional Activities</h2>
+<a id="professional-activities" class="anchor" href="#professional-activities" aria-hidden="true"><span class="octicon octicon-link"></span></a>Professional Activities</h2>
 
 <p><a href="http://popl.mpi-sws.org/2015/">POPL '15</a>: 42nd ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages / External Review Committee</p>
 
@@ -66,7 +66,13 @@ verification tools (see the Software list below).</p>
 <p><a href="http://vmcai13.di.univr.it/">VMCAI '13</a>: 14th International Symposium on Verification, Model Checking and Abstract Interpretation / Program Committee </p>
 
 <h2>
-<a name="publications" class="anchor" href="#publications"><span class="octicon octicon-link"></span></a>Publications</h2>
+<a id="publications" class="anchor" href="#publications" aria-hidden="true"><span class="octicon octicon-link"></span></a>Publications</h2>
+
+<p>Analysis of Asynchronous Programs with Event-Based Synchronization
+  / ESOP '15</p>
+
+<p>Tractable Refinement Checking for Concurrent Objects
+  / POPL '15</p>
 
 <p>Exploiting Synchronization in the Analysis of Shared-Memory Asynchronous Programs
   / SPIN '14 / <a href="papers/conf-spin-EmmiOT14.pdf">pdf</a></p>
@@ -132,7 +138,7 @@ verification tools (see the Software list below).</p>
   / HSCC '06 / <a href="papers/conf-hscc-EmmiM06.pdf">pdf</a></p>
 
 <h2>
-<a name="software" class="anchor" href="#software"><span class="octicon octicon-link"></span></a>Software</h2>
+<a id="software" class="anchor" href="#software" aria-hidden="true"><span class="octicon octicon-link"></span></a>Software</h2>
 
 <p><a href="https://github.com/smackers/smack">SMACK</a> / LLVM bitcode to Boogie translation.</p>
 
@@ -142,7 +148,7 @@ verification tools (see the Software list below).</p>
   <a href="http://www.springer.com/computer/lncs" title="Lecture Notes in Computer Science">LNCS</a> proceedings on a single page, without scaling.</p>
 
 <h2>
-<a name="contact" class="anchor" href="#contact"><span class="octicon octicon-link"></span></a>Contact</h2>
+<a id="contact" class="anchor" href="#contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact</h2>
 
 <p>IMDEA Software Institue<br>
 Campus Montegancedo UPM<br>
