Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -68,26 +68,47 @@ verification tools (see the Software list below).</p>
 <h2>
 <a id="publications" class="anchor" href="#publications" aria-hidden="true"><span class="octicon octicon-link"></span></a>Publications</h2>
 
-<p>Analysis of Asynchronous Programs with Event-Based Synchronization
-  / ESOP '15</p>
+<h3>
+<a id="checking-refinement-for-concurrent-objects" class="anchor" href="#checking-refinement-for-concurrent-objects" aria-hidden="true"><span class="octicon octicon-link"></span></a>Checking Refinement for Concurrent Objects</h3>
 
 <p>Tractable Refinement Checking for Concurrent Objects
   / POPL '15</p>
 
-<p>Exploiting Synchronization in the Analysis of Shared-Memory Asynchronous Programs
-  / SPIN '14 / <a href="papers/conf-spin-EmmiOT14.pdf">pdf</a></p>
+<p>Verifying Concurrent Programs Against Sequential Specifications
+  / ESOP '13 / <a href="papers/conf-esop-BouajjaniEEH13.pdf">pdf</a></p>
 
-<p>SMACK: Decoupling Source Language Details from Verifier Implementations
-  / CAV '14 / <a href="papers/conf-cav-RakamaricE14.pdf">pdf</a></p>
+<p>Parameterized Verification of Transactional Memories
+  / PLDI '10 / <a href="papers/conf-pldi-EmmiMM10.pdf">pdf</a></p>
 
-<p>Bounded Phase Analysis of Message-Passing Programs
-  / STTT '14 / <a href="papers/journals-sttt-BouajjaniE14.pdf">pdf</a></p>
+<p>Verifying Reference Counting Implementations
+  / TACAS '09 / <a href="papers/conf-tacas-EmmiJKM09.pdf">pdf</a></p>
+
+<h3>
+<a id="theoretical-limits-for-concurrent-program-analysis" class="anchor" href="#theoretical-limits-for-concurrent-program-analysis" aria-hidden="true"><span class="octicon octicon-link"></span></a>Theoretical Limits for Concurrent Program Analysis</h3>
+
+<p>Analysis of Asynchronous Programs with Event-Based Synchronization
+  / ESOP '15</p>
 
 <p>Analysis of Recursively Parallel Programs
   / TOPLAS '13 / <a href="papers/journals-toplas-BouajjaniE13.pdf">pdf</a></p>
 
-<p>Verifying Concurrent Programs Against Sequential Specifications
-  / ESOP '13 / <a href="papers/conf-esop-BouajjaniEEH13.pdf">pdf</a></p>
+<p>Analysis of Recursively Parallel Programs
+  / POPL '12 / <a href="papers/conf-popl-BouajjaniE12.pdf">pdf</a></p>
+
+<p>Verifying Compensating Transactions
+  / VMCAI '07 / <a href="papers/conf-vmcai-EmmiM07.pdf">pdf</a></p>
+
+<p>Decision Problems for the Verification of Real-Time Software
+  / HSCC '06 / <a href="papers/conf-hscc-EmmiM06.pdf">pdf</a></p>
+
+<h3>
+<a id="efficient-concurrent-program-exploration" class="anchor" href="#efficient-concurrent-program-exploration" aria-hidden="true"><span class="octicon octicon-link"></span></a>Efficient Concurrent Program Exploration</h3>
+
+<p>Exploiting Synchronization in the Analysis of Shared-Memory Asynchronous Programs
+  / SPIN '14 / <a href="papers/conf-spin-EmmiOT14.pdf">pdf</a></p>
+
+<p>Bounded Phase Analysis of Message-Passing Programs
+  / STTT '14 / <a href="papers/journals-sttt-BouajjaniE14.pdf">pdf</a></p>
 
 <p>Asynchronous Programs with Prioritized Task-Buffers
   / FSE '12 / <a href="papers/conf-fse-EmmiLQ12.pdf">pdf</a></p>
@@ -101,23 +122,20 @@ verification tools (see the Software list below).</p>
 <p>Bounded Phase Analysis of Message-Passing Programs
   / TACAS '12 / <a href="papers/conf-tacas-BouajjaniE12.pdf">pdf</a></p>
 
-<p>Analysis of Recursively Parallel Programs
-  / POPL '12 / <a href="papers/conf-popl-BouajjaniE12.pdf">pdf</a></p>
-
 <p>On Sequentializing Concurrent Programs
   / SAS '11 / <a href="papers/conf-sas-BouajjaniEP11.pdf">pdf</a></p>
 
 <p>Delay-Bounded Scheduling
   / POPL '11 / <a href="papers/conf-popl-EmmiQR11.pdf">pdf</a></p>
 
-<p>Parameterized Verification of Transactional Memories
-  / PLDI '10 / <a href="papers/conf-pldi-EmmiMM10.pdf">pdf</a></p>
-
-<p>Verifying Reference Counting Implementations
-  / TACAS '09 / <a href="papers/conf-tacas-EmmiJKM09.pdf">pdf</a></p>
-
 <p>Assume-Guarantee Verification for Interface Automata
   / FM '08 / <a href="papers/conf-fm-EmmiGP08.pdf">pdf</a></p>
+
+<h3>
+<a id="other-works" class="anchor" href="#other-works" aria-hidden="true"><span class="octicon octicon-link"></span></a>Other Works</h3>
+
+<p>SMACK: Decoupling Source Language Details from Verifier Implementations
+  / CAV '14 / <a href="papers/conf-cav-RakamaricE14.pdf">pdf</a></p>
 
 <p>Type-Preserving Compilation for Large-Scale Optimizing Object-Oriented Compilers
   / PLDI '08 / <a href="papers/conf-pldi-ChenHPECCP08.pdf">pdf</a></p>
@@ -128,14 +146,8 @@ verification tools (see the Software list below).</p>
 <p>Dynamic Test Input Generation for Database Applications
   / ISSTA '07 / <a href="papers/conf-issta-EmmiMS07.pdf">pdf</a></p>
 
-<p>Verifying Compensating Transactions
-  / VMCAI '07 / <a href="papers/conf-vmcai-EmmiM07.pdf">pdf</a></p>
-
 <p>Lock Allocation
   / POPL '07 / <a href="papers/conf-popl-EmmiFJM07.pdf">pdf</a></p>
-
-<p>Decision Problems for the Verification of Real-Time Software
-  / HSCC '06 / <a href="papers/conf-hscc-EmmiM06.pdf">pdf</a></p>
 
 <h2>
 <a id="software" class="anchor" href="#software" aria-hidden="true"><span class="octicon octicon-link"></span></a>Software</h2>
