--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Michael Emmi : ">
+    <meta name="description" content="Michael Emmi : Researcher / IMDEA Software Institute">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/michael-emmi">View on GitHub</a>
 
           <h1 id="project_title">Michael Emmi</h1>
-          <h2 id="project_tagline"></h2>
+          <h2 id="project_tagline">Researcher / IMDEA Software Institute</h2>
 
         </header>
     </div>
