--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
 
     <section id="header">
       <h1>Michael Emmi</h1>
-      <span>Researcher / IMDEA Software Institute</span>
+      <div class="item">
+        <div class="tagline">Researcher / IMDEA Software Institute</div>
+        <span class="thing"><a href="http://www.informatik.uni-trier.de/~ley/pers/hd/e/Emmi:Michael">@dblp</a></span>
+        <span class="thing"><a href="https://github.com/michael-emmi">@GitHub</a></span>
+      </div>
     </section>
 
     <section id="about">
