--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
     <section id="header">
       <h1>Michael Emmi</h1>
+      <div class="tagline">Researcher / IMDEA Software Institute</div>
       <div class="item">
-        <div class="tagline">Researcher / IMDEA Software Institute</div>
-        <span class="thing"><a href="http://www.informatik.uni-trier.de/~ley/pers/hd/e/Emmi:Michael">@dblp</a></span>
-        <span class="thing"><a href="https://github.com/michael-emmi">@GitHub</a></span>
+        <span class="tag"><a href="http://www.informatik.uni-trier.de/~ley/pers/hd/e/Emmi:Michael">@dblp</a></span>
+        <span class="tag"><a href="https://github.com/michael-emmi">@GitHub</a></span>
       </div>
     </section>
 
