--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
 
     <section id="header">
-      <h1>Michael Emmi</h1>
+      <h1 class="title">Michael Emmi</h1>
       <div class="tagline">Researcher / IMDEA Software Institute</div>
       <div class="item">
         <span class="tag"><a href="http://www.informatik.uni-trier.de/~ley/pers/hd/e/Emmi:Michael">@dblp</a></span>
@@ -22,7 +22,7 @@
     <section id="about">
       <h2>About</h2>
       <div>
-        <p>Michael received his Ph.D. in Computer Science from the University of California, Los Angeles (UCLA) in 2010. Michael joined the IMDEA Software Institute in September 2013, following a post-doc at the Université Paris Diderot, on a fellowship awarded by La Fondation Sciences Mathématiques de Paris. Prior to receiving his doctorate, Michael completed his undergraduate studies at the University of Binghamton, of the State University of New York (SUNY). He has been a teaching assistant for undergraduate courses at UCLA and Université Paris Diderot, and has held internships at Microsoft Research, NASA Ames Research Center, and IBM.</p>
+        <p>Michael received his Ph.D. in Computer Science from <abbr title="The University of California, Los Angeles">UCLA</abbr> in 2010. Michael joined the IMDEA Software Institute in September 2013, following a post-doc at the Université Paris Diderot, on a fellowship awarded by La Fondation Sciences Mathématiques de Paris. Prior to receiving his doctorate, Michael completed his undergraduate studies at the University of Binghamton, of the State University of New York (SUNY). He has been a teaching assistant for undergraduate courses at UCLA and Université Paris Diderot, and has held internships at Microsoft Research, NASA Ames Research Center, and IBM.</p>
 <p>Michael is primarily interested in developing formal techniques to foster the construction of reliable software systems. Specifically, Michael has developed formal models to support the analysis of reactive, parallel, and distributed software systems, studied their theoretical properties (i.e., decidability, complexity), and developed exploration techniques to quickly discover faulty behavior in, or prove correctness of, such systems. Besides being the/a principal author of many noteworthy scientific publications (see the Publications list below), Michael is a lead developer of some software verification tools (see the Software list below).</p>
 
       </div>
@@ -36,7 +36,7 @@
             <span class="place">POPL&nbsp'15</span>
           </div>
           <div class="info">
-            <a href="http://popl.mpi-sws.org/2015/" class="live info">42nd ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages</a>
+            <a href="http://popl.mpi-sws.org/2015/" class="info">42nd ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages</a>
           </div>
         </div>
         <div class="item">
@@ -45,7 +45,7 @@
             <span class="place">FM&nbsp'15</span>
           </div>
           <div class="info">
-            <a href="http://fm2015.ifi.uio.no" class="live info">20th International Symposium on Formal Methods</a>
+            <a href="http://fm2015.ifi.uio.no" class="info">20th International Symposium on Formal Methods</a>
           </div>
         </div>
         <div class="item">
@@ -54,7 +54,7 @@
             <span class="place">EC<sup>2</sup>&nbsp'14</span>
           </div>
           <div class="info">
-            <a href="http://software.imdea.org/ec2-2014/" class="live info">7th International Workshop on Exploiting Concurrency Efficiently and Correctly</a>
+            <a href="http://software.imdea.org/ec2-2014/" class="info">7th International Workshop on Exploiting Concurrency Efficiently and Correctly</a>
           </div>
         </div>
         <div class="item">
@@ -63,7 +63,7 @@
             <span class="place">PLDI&nbsp'14</span>
           </div>
           <div class="info">
-            <a href="http://conferences.inf.ed.ac.uk/pldi2014/" class="live info">35th annual ACM SIGPLAN Conference on Programming Language Design and Implementation</a>
+            <a href="http://conferences.inf.ed.ac.uk/pldi2014/" class="info">35th annual ACM SIGPLAN Conference on Programming Language Design and Implementation</a>
           </div>
         </div>
         <div class="item">
@@ -72,7 +72,7 @@
             <span class="place">POPL&nbsp'13</span>
           </div>
           <div class="info">
-            <a href="http://popl.mpi-sws.org/2013/" class="live info">40th ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages</a>
+            <a href="http://popl.mpi-sws.org/2013/" class="info">40th ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages</a>
           </div>
         </div>
         <div class="item">
@@ -81,7 +81,7 @@
             <span class="place">VMCAI&nbsp'13</span>
           </div>
           <div class="info">
-            <a href="http://vmcai13.di.univr.it/" class="live info">14th International Symposium on Verification, Model Checking and Abstract Interpretation</a>
+            <a href="http://vmcai13.di.univr.it/" class="info">14th International Symposium on Verification, Model Checking and Abstract Interpretation</a>
           </div>
         </div>
     </section>
@@ -91,7 +91,7 @@
         <div class="item">
           <div class="head">
             <span class="thing">
-                <a class="to-appear">SMACK+Corral: A Modular Verifier</a>
+                <a>SMACK+Corral: A Modular Verifier</a>
             </span>
             <span class="place">TACAS&nbsp'15</span>
           </div>
@@ -99,7 +99,7 @@
         <div class="item">
           <div class="head">
             <span class="thing">
-                <a class="to-appear">Analysis of Asynchronous Programs with Event-Based Synchronization</a>
+                <a>Analysis of Asynchronous Programs with Event-Based Synchronization</a>
             </span>
             <span class="place">ESOP&nbsp'15</span>
           </div>
@@ -107,7 +107,7 @@
         <div class="item">
           <div class="head">
             <span class="thing">
-                <a class="to-appear">Tractable Refinement Checking for Concurrent Objects</a>
+                <a>Tractable Refinement Checking for Concurrent Objects</a>
             </span>
             <span class="place">POPL&nbsp'15</span>
           </div>
@@ -115,7 +115,7 @@
         <div class="item">
           <div class="head">
             <span class="thing">
-                <a href="papers/conf-cav-RakamaricE14.pdf" class="live">SMACK: Decoupling Source Language Details from Verifier Implementations</a>
+                <a href="papers/conf-cav-RakamaricE14.pdf">SMACK: Decoupling Source Language Details from Verifier Implementations</a>
             </span>
             <span class="place">CAV&nbsp'14</span>
           </div>
@@ -123,7 +123,7 @@
         <div class="item">
           <div class="head">
             <span class="thing">
-                <a href="papers/conf-spin-EmmiOT14.pdf" class="live">Exploiting Synchronization in the Analysis of Shared-Memory Asynchronous Programs</a>
+                <a href="papers/conf-spin-EmmiOT14.pdf">Exploiting Synchronization in the Analysis of Shared-Memory Asynchronous Programs</a>
             </span>
             <span class="place">SPIN&nbsp'14</span>
           </div>
@@ -131,7 +131,7 @@
         <div class="item">
           <div class="head">
             <span class="thing">
-                <a href="papers/journals-sttt-BouajjaniE14.pdf" class="live">Bounded Phase Analysis of Message-Passing Programs</a>
+                <a href="papers/journals-sttt-BouajjaniE14.pdf">Bounded Phase Analysis of Message-Passing Programs</a>
             </span>
             <span class="place">STTT&nbsp'14</span>
           </div>
@@ -139,7 +139,7 @@
         <div class="item">
           <div class="head">
             <span class="thing">
-                <a href="papers/conf-esop-BouajjaniEEH13.pdf" class="live">Verifying Concurrent Programs Against Sequential Specifications</a>
+                <a href="papers/conf-esop-BouajjaniEEH13.pdf">Verifying Concurrent Programs Against Sequential Specifications</a>
             </span>
             <span class="place">ESOP&nbsp'13</span>
           </div>
@@ -147,7 +147,7 @@
         <div class="item">
           <div class="head">
             <span class="thing">
-                <a href="papers/journals-toplas-BouajjaniE13.pdf" class="live">Analysis of Recursively Parallel Programs</a>
+                <a href="papers/journals-toplas-BouajjaniE13.pdf">Analysis of Recursively Parallel Programs</a>
             </span>
             <span class="place">TOPLAS&nbsp'13</span>
           </div>
@@ -155,7 +155,7 @@
         <div class="item">
           <div class="head">
             <span class="thing">
-                <a href="papers/conf-fse-EmmiLQ12.pdf" class="live">Asynchronous Programs with Prioritized Task-Buffers</a>
+                <a href="papers/conf-fse-EmmiLQ12.pdf">Asynchronous Programs with Prioritized Task-Buffers</a>
             </span>
             <span class="place">FSE&nbsp'12</span>
           </div>
@@ -163,7 +163,7 @@
         <div class="item">
           <div class="head">
             <span class="thing">
-                <a href="papers/conf-sas-EmmiL12.pdf" class="live">Finding Non-Terminating Executions in Distributed Asynchronous Programs</a>
+                <a href="papers/conf-sas-EmmiL12.pdf">Finding Non-Terminating Executions in Distributed Asynchronous Programs</a>
             </span>
             <span class="place">SAS&nbsp'12</span>
           </div>
@@ -171,7 +171,7 @@
         <div class="item">
           <div class="head">
             <span class="thing">
-                <a href="papers/conf-cav-AtigBEL12.pdf" class="live">Detecting Fair Non-Termination in Multithreaded Programs</a>
+                <a href="papers/conf-cav-AtigBEL12.pdf">Detecting Fair Non-Termination in Multithreaded Programs</a>
             </span>
             <span class="place">CAV&nbsp;'12</span>
           </div>
@@ -179,7 +179,7 @@
         <div class="item">
           <div class="head">
             <span class="thing">
-                <a href="papers/conf-tacas-BouajjaniE12.pdf" class="live">Bounded Phase Analysis of Message-Passing Programs</a>
+                <a href="papers/conf-tacas-BouajjaniE12.pdf">Bounded Phase Analysis of Message-Passing Programs</a>
             </span>
             <span class="place">TACAS&nbsp'12</span>
           </div>
@@ -187,7 +187,7 @@
         <div class="item">
           <div class="head">
             <span class="thing">
-                <a href="papers/conf-popl-BouajjaniE12.pdf" class="live">Analysis of Recursively Parallel Programs</a>
+                <a href="papers/conf-popl-BouajjaniE12.pdf">Analysis of Recursively Parallel Programs</a>
             </span>
             <span class="place">POPL&nbsp'12</span>
           </div>
@@ -195,7 +195,7 @@
         <div class="item">
           <div class="head">
             <span class="thing">
-                <a href="papers/conf-sas-BouajjaniEP11.pdf" class="live">On Sequentializing Concurrent Programs</a>
+                <a href="papers/conf-sas-BouajjaniEP11.pdf">On Sequentializing Concurrent Programs</a>
             </span>
             <span class="place">SAS&nbsp'11</span>
           </div>
@@ -203,7 +203,7 @@
         <div class="item">
           <div class="head">
             <span class="thing">
-                <a href="papers/conf-pldi-EmmiMM10.pdf" class="live">Parameterized Verification of Transactional Memories</a>
+                <a href="papers/conf-pldi-EmmiMM10.pdf">Parameterized Verification of Transactional Memories</a>
             </span>
             <span class="place">PLDI&nbsp'10</span>
           </div>
@@ -211,7 +211,7 @@
         <div class="item">
           <div class="head">
             <span class="thing">
-                <a href="papers/conf-tacas-EmmiJKM09.pdf" class="live">Verifying Reference Counting Implementations</a>
+                <a href="papers/conf-tacas-EmmiJKM09.pdf">Verifying Reference Counting Implementations</a>
             </span>
             <span class="place">TACAS&nbsp'09</span>
           </div>
@@ -219,7 +219,7 @@
         <div class="item">
           <div class="head">
             <span class="thing">
-                <a href="papers/conf-fm-EmmiGP08.pdf" class="live">Assume-Guarantee Verification for Interface Automata</a>
+                <a href="papers/conf-fm-EmmiGP08.pdf">Assume-Guarantee Verification for Interface Automata</a>
             </span>
             <span class="place">FM&nbsp'08</span>
           </div>
@@ -227,7 +227,7 @@
         <div class="item">
           <div class="head">
             <span class="thing">
-                <a href="papers/conf-pldi-ChenHPECCP08.pdf" class="live">Type-Preserving Compilation for Large-Scale Optimizing Object-Oriented Compilers</a>
+                <a href="papers/conf-pldi-ChenHPECCP08.pdf">Type-Preserving Compilation for Large-Scale Optimizing Object-Oriented Compilers</a>
             </span>
             <span class="place">PLDI&nbsp'08</span>
           </div>
@@ -235,7 +235,7 @@
         <div class="item">
           <div class="head">
             <span class="thing">
-                <a href="papers/conf-sandbox-WangEF07.pdf" class="live">Assembling an Expressive Facial Animation System</a>
+                <a href="papers/conf-sandbox-WangEF07.pdf">Assembling an Expressive Facial Animation System</a>
             </span>
             <span class="place">Sandbox&nbsp'07</span>
           </div>
@@ -243,7 +243,7 @@
         <div class="item">
           <div class="head">
             <span class="thing">
-                <a href="papers/conf-issta-EmmiMS07.pdf" class="live">Dynamic Test Input Generation for Database Applications</a>
+                <a href="papers/conf-issta-EmmiMS07.pdf">Dynamic Test Input Generation for Database Applications</a>
             </span>
             <span class="place">ISSTA&nbsp'07</span>
           </div>
@@ -251,7 +251,7 @@
         <div class="item">
           <div class="head">
             <span class="thing">
-                <a href="papers/conf-vmcai-EmmiM07.pdf" class="live">Verifying Compensating Transactions</a>
+                <a href="papers/conf-vmcai-EmmiM07.pdf">Verifying Compensating Transactions</a>
             </span>
             <span class="place">VMCAI&nbsp'07</span>
           </div>
@@ -259,7 +259,7 @@
         <div class="item">
           <div class="head">
             <span class="thing">
-                <a href="papers/conf-popl-EmmiFJM07.pdf" class="live">Lock Allocation</a>
+                <a href="papers/conf-popl-EmmiFJM07.pdf">Lock Allocation</a>
             </span>
             <span class="place">POPL&nbsp'07</span>
           </div>
@@ -267,7 +267,7 @@
         <div class="item">
           <div class="head">
             <span class="thing">
-                <a href="papers/conf-hscc-EmmiM06.pdf" class="live">Decision Problems for the Verification of Real-Time Software</a>
+                <a href="papers/conf-hscc-EmmiM06.pdf">Decision Problems for the Verification of Real-Time Software</a>
             </span>
             <span class="place">HSCC&nbsp'06</span>
           </div>
@@ -279,7 +279,7 @@
         <div class="item">
           <div class="head">
             <span class="thing">
-              <a href="https://github.com/smackers/smack" class="live">SMACK</a>
+              <a href="https://github.com/smackers/smack">SMACK</a>
             </span>
           </div>
           <div class="info">LLVM bitcode to Boogie translation.
@@ -288,7 +288,7 @@
         <div class="item">
           <div class="head">
             <span class="thing">
-              <a href="https://github.com/michael-emmi/c2s" class="live">c2s</a>
+              <a href="https://github.com/michael-emmi/c2s">c2s</a>
             </span>
           </div>
           <div class="info">concurrent to sequential program translations.
@@ -297,7 +297,7 @@
         <div class="item">
           <div class="head">
             <span class="thing">
-              <a href="https://github.com/michael-emmi/printlncs" class="live">printlncs</a>
+              <a href="https://github.com/michael-emmi/printlncs">printlncs</a>
             </span>
           </div>
           <div class="info">save paper by printing every two pages of LNCS proceedings on a single page, without scaling.
@@ -313,7 +313,7 @@ Campus Montegancedo UPM<br>
 España
 </div>
         <div class="item">
-          E / <a class="live" href="mailto:michael.emmi@gmail.com">michael.emmi@gmail.com</a>
+          E / <a href="mailto:michael.emmi@gmail.com">michael.emmi@gmail.com</a>
         </div>
           <div class="item">T / +34 911 012 202 (Spain)</div>
           <div class="item">T / +1 (310) 564-6453 (USA)</div>
