--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <span class="place">POPL&nbsp'15</span>
           </div>
           <div class="info">
-            <a href="http://popl.mpi-sws.org/2015/" class="info">42nd ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages</a>
+            <a href="http://popl.mpi-sws.org/2015/">42nd ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages</a>
           </div>
         </div>
         <div class="item">
@@ -45,7 +45,7 @@
             <span class="place">FM&nbsp'15</span>
           </div>
           <div class="info">
-            <a href="http://fm2015.ifi.uio.no" class="info">20th International Symposium on Formal Methods</a>
+            <a href="http://fm2015.ifi.uio.no">20th International Symposium on Formal Methods</a>
           </div>
         </div>
         <div class="item">
@@ -54,7 +54,7 @@
             <span class="place">EC<sup>2</sup>&nbsp'14</span>
           </div>
           <div class="info">
-            <a href="http://software.imdea.org/ec2-2014/" class="info">7th International Workshop on Exploiting Concurrency Efficiently and Correctly</a>
+            <a href="http://software.imdea.org/ec2-2014/">7th International Workshop on Exploiting Concurrency Efficiently and Correctly</a>
           </div>
         </div>
         <div class="item">
@@ -63,7 +63,7 @@
             <span class="place">PLDI&nbsp'14</span>
           </div>
           <div class="info">
-            <a href="http://conferences.inf.ed.ac.uk/pldi2014/" class="info">35th annual ACM SIGPLAN Conference on Programming Language Design and Implementation</a>
+            <a href="http://conferences.inf.ed.ac.uk/pldi2014/">35th annual ACM SIGPLAN Conference on Programming Language Design and Implementation</a>
           </div>
         </div>
         <div class="item">
@@ -72,7 +72,7 @@
             <span class="place">POPL&nbsp'13</span>
           </div>
           <div class="info">
-            <a href="http://popl.mpi-sws.org/2013/" class="info">40th ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages</a>
+            <a href="http://popl.mpi-sws.org/2013/">40th ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages</a>
           </div>
         </div>
         <div class="item">
@@ -81,7 +81,7 @@
             <span class="place">VMCAI&nbsp'13</span>
           </div>
           <div class="info">
-            <a href="http://vmcai13.di.univr.it/" class="info">14th International Symposium on Verification, Model Checking and Abstract Interpretation</a>
+            <a href="http://vmcai13.di.univr.it/">14th International Symposium on Verification, Model Checking and Abstract Interpretation</a>
           </div>
         </div>
     </section>
