--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
             </span>
             <span class="place">TACAS&nbsp'15</span>
           </div>
+            <div class="info">
+              competition contribution to SV-COMP 2015
+            </div>
         </div>
         <div class="item">
           <div class="head">
@@ -119,6 +122,9 @@
             </span>
             <span class="place">CAV&nbsp'14</span>
           </div>
+            <div class="info">
+              tool paper
+            </div>
         </div>
         <div class="item">
           <div class="head">
