Missing one publication.

--- a/index.html
+++ b/index.html
@@ -209,6 +209,14 @@
         <div class="item">
           <div class="head">
             <span class="thing">
+                <a href="papers/conf-popl-EmmiQR11.pdf">Delay-Bounded Scheduling</a>
+            </span>
+            <span class="place">POPL&nbsp'11</span>
+          </div>
+        </div>
+        <div class="item">
+          <div class="head">
+            <span class="thing">
                 <a href="papers/conf-pldi-EmmiMM10.pdf">Parameterized Verification of Transactional Memories</a>
             </span>
             <span class="place">PLDI&nbsp'10</span>
