--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <span class="place">VMCAI&nbsp'13</span>
           </div>
           <div class="info">
-            <a href="http://vmcai13.di.univr.it/">14th International Symposium on Verification, Model Checking and Abstract Interpretation</a>
+            <a href="http://vmcai13.di.univr.it/">14th International Conference on Verification, Model Checking and Abstract Interpretation</a>
           </div>
         </div>
     </section>
